apps/mediastack/templates/jellyseerr.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mediastack-jellyseerr
  labels:
    app: jellyseerr
spec:
  replicas: 1
  revisionHistoryLimit: 3
  selector:
    matchLabels:
      app: jellyseerr
  template:
    metadata:
      labels:
        app: jellyseerr
    spec:
      containers:
      - name: jellyseerr
        image: fallenbagel/jellyseerr:latest
        ports:
        - containerPort: 5055
